# cmake.macchina.io

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  asgard.yaml  delivery.txt.in  env.bash
cmake/: FindOpenSSL_PDK.cmake  delivery.cmake
devices/: CMakeLists.txt
devices/CAN/: .gitignore  CMakeLists.txt
devices/CAN/include/IoT/CAN/: Sensor.h
devices/CISS/: .gitignore  CMakeLists.txt
devices/Devices/: .gitignore  CMakeLists.txt
devices/GNSS/: .gitignore  CMakeLists.txt
devices/GNSS/NMEA/: CMakeLists.txt
devices/GNSS/NMEA/src/: GGAProcessor.cpp
devices/Legato/: .gitignore  CMakeLists.txt
devices/Legato/src/: GNSSSensorImpl.cpp  GNSSSensorImpl.h
devices/Linux/: .gitignore  CMakeLists.txt
devices/SensorTag/: .gitignore  CMakeLists.txt
devices/Serial/: .gitignore  CMakeLists.txt
devices/Simulation/: .gitignore  CMakeLists.txt
devices/Tf/: .gitignore  CMakeLists.txt
devices/XBeeSensor/: .gitignore  CMakeLists.txt
devices/XDK/: .gitignore  CMakeLists.txt
platform/: .gitignore  CMakeLists.txt
platform/CodeGeneration/: CMakeLists.txt
platform/CppParser/: CMakeLists.txt
platform/Crypto/: CMakeLists.txt
platform/Data/: CMakeLists.txt
platform/Geo/: CMakeLists.txt
platform/JS/Bridge/: CMakeLists.txt
platform/JS/Bridge/cmake/: PocoJSBridgeConfig.cmake
platform/JS/Core/: CMakeLists.txt
platform/JS/Core/cmake/: PocoJSCoreConfig.cmake
platform/JS/Data/: CMakeLists.txt
platform/JS/Data/cmake/: PocoJSDataConfig.cmake
platform/JS/Net/: CMakeLists.txt
platform/JS/Net/cmake/: PocoJSNetConfig.cmake
platform/JS/V8/: CMakeLists.txt  common.gypi
platform/JS/V8/include/: .gitignore
platform/JS/V8/include/libplatform/: .gitignore
platform/OSP/: CMakeLists.txt
platform/OSP/BundleAdmin/: .gitignore  CMakeLists.txt
platform/OSP/BundleCreator/: CMakeLists.txt
platform/OSP/CodeCacheUtility/: CMakeLists.txt
platform/OSP/Core/: .gitignore  CMakeLists.txt
platform/OSP/Crypto/: .gitignore  CMakeLists.txt
platform/OSP/Data/: CMakeLists.txt
platform/OSP/Data/PostgreSQL/: CMakeLists.txt
platform/OSP/Data/PostgreSQL/src/: PostgreSQLBundleActivator.cpp
platform/OSP/Data/SQLite/: .gitignore  CMakeLists.txt  SQLite.bndlspec
platform/OSP/JS/: .gitignore  CMakeLists.txt
platform/OSP/JS/Data/: .gitignore  CMakeLists.txt
platform/OSP/JS/Net/: .gitignore  CMakeLists.txt
platform/OSP/JS/Scheduler/: .gitignore  CMakeLists.txt
platform/OSP/JS/Web/: .gitignore  CMakeLists.txt
platform/OSP/JS/src/: JSBundleActivator.cpp
platform/OSP/Net/: CMakeLists.txt
platform/OSP/NetSSL_OpenSSL/: .gitignore  CMakeLists.txt
platform/OSP/RemotingNG/TCP/: .gitignore  CMakeLists.txt
platform/OSP/SecureWebServer/: .gitignore  CMakeLists.txt
platform/OSP/SimpleAuth/: .gitignore  CMakeLists.txt
platform/OSP/StripBundle/: CMakeLists.txt
platform/OSP/Web/: .gitignore  CMakeLists.txt
platform/OSP/WebEvent/: .gitignore  CMakeLists.txt
platform/OSP/WebEvent/include/Poco/OSP/WebEvent/: WebEventRequestHandler.h  WebEventServiceImpl.h
platform/OSP/WebServer/: .gitignore  CMakeLists.txt
platform/OSP/cmake/: PocoBundle.bndlspec.in  PocoOSPConfig.cmake  PocoOSPMacros.cmake  RemoteGen.xml.in
platform/PageCompiler/: CMakeLists.txt
platform/PageCompiler/File2Page/: CMakeLists.txt
platform/RemotingNG/: CMakeLists.txt
platform/RemotingNG/REST/: CMakeLists.txt
platform/RemotingNG/REST/cmake/: PocoRemotingNGRESTConfig.cmake
platform/RemotingNG/REST/include/Poco/RemotingNG/REST/: HTTPRequestDeserializer.h  HTTPRequestHandler.h  HTTPRequestHandlerFactory.h  HTTPResponseSerializer.h  Listener.h  REST.h  ServerTransport.h
platform/RemotingNG/REST/src/: HTTPRequestDesrializer.cpp  HTTPRequestHandler.cpp  HTTPRequestHandlerFactory.cpp  HTTPResponseSerializer.cpp  Listener.cpp  ServerTransport.cpp
platform/RemotingNG/RemoteGen/: CMakeLists.txt
platform/RemotingNG/RemoteGen/src/: RemoteGen.cpp
platform/RemotingNG/TCP/: CMakeLists.txt
platform/RemotingNG/TCP/testsuite/: CMakeLists.txt
platform/RemotingNG/testsuite/: CMakeLists.txt
platform/Serial/: CMakeLists.txt
protocols/: CMakeLists.txt
protocols/BtLE/: .gitignore  CMakeLists.txt
protocols/BtLE/BlueZ/: .gitignore  CMakeLists.txt
protocols/BtLE/BlueZ/src/: BlueZGATTClient.cpp  BlueZGATTClient.h
protocols/CAN/: .gitignore  CMakeLists.txt
protocols/CAN/SocketCAN/: .gitignore  CMakeLists.txt  SocketCAN.bndlspec
protocols/MQTT/: .gitignore  CMakeLists.txt
protocols/MQTT/Paho/: CMakeLists.txt
protocols/MQTT/Paho/src/: MQTTVersion.c
protocols/MQTT/src/: MQTTClientImpl.h
protocols/Modbus/: .gitignore  CMakeLists.txt
protocols/Modbus/RTU/: .gitignore  CMakeLists.txt
protocols/Modbus/TCP/: CMakeLists.txt
protocols/ROS/: CMakeLists.txt
protocols/ROS/App/: CMakeLists.txt
server/: CMakeLists.txt  macchina.properties  macchina.properties.install
services/: CMakeLists.txt
services/MobileConnection/: .gitignore  CMakeLists.txt
services/MobileConnection/Legato/: CMakeLists.txt
services/UnitsOfMeasure/: .gitignore  CMakeLists.txt
webui/: CMakeLists.txt
webui/Ace/: .gitignore  CMakeLists.txt
webui/AngularFileUpload/: .gitignore  CMakeLists.txt
webui/AngularJS/: .gitignore  CMakeLists.txt
webui/AngularUITree/: .gitignore  CMakeLists.txt
webui/BundleAdmin/: CMakeLists.txt
webui/ChartJS/: .gitignore  CMakeLists.txt
webui/Common/: .gitignore  CMakeLists.txt
webui/Console/: .gitignore  CMakeLists.txt
webui/Devices/: .gitignore  CMakeLists.txt
webui/GNSSTracking/: .gitignore  CMakeLists.txt
webui/GPIO/: .gitignore  CMakeLists.txt
webui/Launcher/: .gitignore  CMakeLists.txt
webui/MQTT/: .gitignore  CMakeLists.txt
webui/MomentJS/: .gitignore  CMakeLists.txt
webui/OpenLayers/: .gitignore  CMakeLists.txt
webui/Playground/: .gitignore  CMakeLists.txt
webui/Settings/: .gitignore  CMakeLists.txt
webui/SystemInformation/: .gitignore  CMakeLists.txt
webui/SystemInformation/bundle/webapp/: memory.jss  processes.jss
webui/TinyColor/: .gitignore  CMakeLists.txt
webui/jQuery/: .gitignore  CMakeLists.txt
(+63 files in other folders)
