add_subdirectory(Devices)
add_subdirectory(CISS)
add_subdirectory(GNSS)
if(NOT WIN32)
  add_subdirectory(CAN)
  add_subdirectory(Legato)
  add_subdirectory(Linux)
  add_subdirectory(Tf)
  add_subdirectory(XBeeSensor)
  add_subdirectory(XDK)
endif()
add_subdirectory(SensorTag)
add_subdirectory(Serial)
add_subdirectory(Simulation)
