add_subdirectory(Playground)
add_subdirectory(Settings)
add_subdirectory(BundleAdmin)
add_subdirectory(Console)
add_subdirectory(Launcher)
add_subdirectory(Ace)
add_subdirectory(AngularFileUpload)
add_subdirectory(AngularJS)
add_subdirectory(AngularUITree)
add_subdirectory(ChartJS)
add_subdirectory(Common)
add_subdirectory(Devices)
add_subdirectory(GNSSTracking)
add_subdirectory(GPIO)
add_subdirectory(jQuery)
add_subdirectory(MomentJS)
add_subdirectory(MQTT)
add_subdirectory(OpenLayers)
add_subdirectory(SystemInformation)
add_subdirectory(TinyColor)